--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main{
+  background-color: greenyellow;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100vw;
+  height: 100vh;
 }
-
-.App-link {
-  color: #61dafb;
+.search{
+  width: 80vw;
+  margin-top: 30px;
+  height: 40px;
+  border-radius: 10px;
 }
+.addnote-container{
+  display: flex;
+  flex-direction: column;
+ align-items: center;
+  row-gap: 20px;
+  padding: 2vw;
+}
+.input{
+  width: 80vw;
+  height: 80px;
+}
+button{
+  width: 120px;
+  height: 40px;
+  border-radius: 10px;
+  background-color: black;
+  color: antiquewhite;
+  font-weight: bold;
+}
+@media only screen and (max-width: 350px){
+  .main{
+    background-color: greenyellow;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+    width: 100vw;
+    height: 100vh;
   }
-  to {
-    transform: rotate(360deg);
+  .search{
+    width: 300px;
+    margin-top: 20px;
+    height: 40px;
+    border-radius: 10px;
+  }
+  .addnote-container{
+    display: flex;
+    flex-direction: column;
+   align-items: center;
+    row-gap: 10px;
+    padding: 10px;
+  }
+  .input{
+    width: 300px;
+    height: 80px;
+  }
+  button{
+    width: 120px;
+    height: 40px;
+    border-radius: 10px;
+    background-color: black;
+    color: antiquewhite;
+    font-weight: bold;
   }
 }
